[package]
name = "ardpie"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.215"
warp = "0.3.7"
tokio = { version = "1.41.1", features = ["full"] }
chrono = "0.4.38"
env_logger = "0.11.5"
dotenv = "0.15.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
