[package]
name = "ardpie"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.36", features = ["serde"] }
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio-rustls", "time", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full"] }
warp = "0.3.7"
dotenv = "0.15.0"
env_logger = "0.11.5"
idna = "=1.0.2"
